[gd_scene load_steps=10 format=3 uid="uid://u3uj1y6jo7ry"]

[ext_resource type="Script" path="res://Scenes/Combat/combat_scene.gd" id="1_mplpw"]
[ext_resource type="Texture2D" uid="uid://cydmr2o58f3sr" path="res://icon.svg" id="2_7je8g"]
[ext_resource type="Resource" uid="uid://c10lsopiajkts" path="res://Resource/example/player_stats_example.tres" id="2_7qaf6"]
[ext_resource type="Resource" uid="uid://82jredsffv5b" path="res://Resource/example/enemy_stats_example.tres" id="3_6yfnb"]
[ext_resource type="Script" path="res://Scenes/Combat/combat_manager.gd" id="4_ly14c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_golc8"]
bg_color = Color(0, 0.509804, 0.286275, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nyluu"]
bg_color = Color(0, 0.709804, 0.364706, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_umgy2"]
bg_color = Color(0.415686, 0.505882, 0, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_35r0j"]
bg_color = Color(0.580392, 0.643137, 0, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="CombatScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mplpw")
player_stats = ExtResource("2_7qaf6")
enemy_stats = ExtResource("3_6yfnb")

[node name="CombatManager" type="Node" parent="."]
script = ExtResource("4_ly14c")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnemyContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.425
anchor_right = 0.5
anchor_bottom = 0.425
offset_left = -2.0
offset_top = -31.0
offset_right = 2.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="HappyPointProgressBar" type="ProgressBar" parent="EnemyContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_golc8")
theme_override_styles/fill = SubResource("StyleBoxFlat_nyluu")
step = 1.0
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="EnemyContainer/HappyPointProgressBar"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "HP: 25/50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EngagementProgressBar" type="ProgressBar" parent="EnemyContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_umgy2")
theme_override_styles/fill = SubResource("StyleBoxFlat_35r0j")
step = 1.0
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="EnemyContainer/EngagementProgressBar"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "EG: 25/50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
texture = ExtResource("2_7je8g")
stretch_mode = 5

[node name="PlayerPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -136.0
grow_horizontal = 2
grow_vertical = 0

[node name="ActionPanel" type="NinePatchRect" parent="PlayerPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Actions" type="VBoxContainer" parent="PlayerPanel/HBoxContainer/ActionPanel"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Set Up" type="Button" parent="PlayerPanel/HBoxContainer/ActionPanel/Actions"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Set Up"
flat = true

[node name="Meander" type="Button" parent="PlayerPanel/HBoxContainer/ActionPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Meander
"
flat = true

[node name="Punchline" type="Button" parent="PlayerPanel/HBoxContainer/ActionPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Punchline"
flat = true

[node name="Escape" type="Button" parent="PlayerPanel/HBoxContainer/ActionPanel/Actions"]
layout_mode = 2
text = "Escape"
flat = true

[node name="Textbox" type="NinePatchRect" parent="PlayerPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel/HBoxContainer/Textbox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
alignment = 1

[node name="Name" type="Label" parent="PlayerPanel/HBoxContainer/Textbox/PlayerData"]
layout_mode = 2
size_flags_horizontal = 3
text = "PLAYER"

[node name="HPProgressBar" type="ProgressBar" parent="PlayerPanel/HBoxContainer/Textbox/PlayerData"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 50.0
step = 1.0
value = 25.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerPanel/HBoxContainer/Textbox/PlayerData/HPProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "HP: 25/50"

[node name="Label" type="Label" parent="PlayerPanel/HBoxContainer/Textbox/PlayerData"]
layout_mode = 2
text = "ACT 10"

[node name="LogData" type="VBoxContainer" parent="PlayerPanel/HBoxContainer/Textbox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="IdeaContainer" type="VBoxContainer" parent="PlayerPanel/HBoxContainer/Textbox"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="DetailPanel" type="NinePatchRect" parent="."]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="DetailText" type="Label" parent="DetailPanel"]
custom_minimum_size = Vector2(628, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -11.5
offset_right = 37.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "HP: 25/50"
